--- a/political_index.html
+++ b/political_index.html
@@ -11,7 +11,7 @@
 }
 
 .node text {
-  font: 10px sans-serif;
+  font: 12px sans-serif;
   pointer-events: none;
 }
 
@@ -22,7 +22,13 @@ path.link {
 }
 
 </style>
+
+<head>
+  <title>Political Index</title>
+</head>
+
 <body>
+<h1>Plitical Index</h1>
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script src="js/tree.js"></script>
 <script src="js/visualization.js"></script>
