--- a/political_index.html
+++ b/political_index.html
@@ -11,5 +11,5 @@
 </div>
   <script src="http://d3js.org/d3.v3.min.js"></script>
   <script src="js/tree.js"></script>
-  <script src="js/visualization.js"></script>
+  <script src="js/errorplot.js"></script>
 </body>
