--- a/variance.html
+++ b/variance.html
@@ -2,12 +2,12 @@
 <meta charset="utf-8">
 <link href="css/application.css" rel="stylesheet" />
 <head>
-  <title>Political Index</title>
+  <title>Variance of Ideologies</title>
 </head>
 
 <body>
 <div style="text-align:center">
-  <h1>Plitical Index</h1>
+  <h1>Variance of Ideologies</h1>
 </div>
   <script src="http://d3js.org/d3.v3.min.js"></script>
   <script src="js/tree.js"></script>
