--- a/amazon_tree.html
+++ b/amazon_tree.html
@@ -2,14 +2,14 @@
 <meta charset="utf-8">
 <link href="css/application.css" rel="stylesheet" />
 <head>
-  <title>Political Index</title>
+  <title>Amazon Tree</title>
 </head>
 
 <body>
 <div style="text-align:center">
-  <h1>Political Index</h1>
+  <h1>Amazon Tree</h1>
 </div>
   <script src="http://d3js.org/d3.v3.min.js"></script>
   <script src="js/tree.js"></script>
-  <script src="js/errorplot.js"></script>
+  <script src="js/noplot.js"></script>
 </body>
